# VxUtil

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml
vxutil-core/: Cargo.toml
vxutil-core/src/: effects.rs  error.rs  lib.rs  media.rs  project.rs  timeline.rs  types.rs
vxutil-core/src/effects/: blur.rs  color.rs  mod.rs  opacity.rs  transform.rs
vxutil-core/src/media/: item.rs  library.rs  metadata.rs  mod.rs  types.rs
vxutil-core/src/project/: mod.rs  project.rs  settings.rs
vxutil-core/src/timeline/: blend_mode.rs  clip.rs  mod.rs  sequence.rs  track.rs
vxutil-core/src/types/: framerate.rs  mod.rs  resolution.rs  timecode.rs  timerange.rs
vxutil-engine/: Cargo.toml
vxutil-engine/src/: cache.rs  error.rs  ffmpeg.rs  lib.rs  playback.rs  rendering.rs
vxutil-ui/: Cargo.toml
vxutil-ui/src/: app.rs  main.rs
vxutil-ui/src/ui/: mod.rs
