[package]
name = "VxUtil"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
cpal = "0.16.0"
crossbeam = "0.8.4"
ffmpeg-next = { version = "8.0.0", features = ["build"] }
iced = "0.13.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]}
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
wgpu = "27.0.1"
