[workspace]
members = [
    "vxutil-core",
    "vxutil-engine",
    "vxutil-ui",
]
resolver = "2"
default-members = ["vxutil-ui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0.100"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
tracing-appender = "0.2.3"

# Time
chrono = { version = "0.4.42", features = ["serde"] }

# Media processing
ffmpeg-next = "8.0.0"
wgpu = "27.0.1"
image = "0.25.8"

# Audio
cpal = "0.16.0"

# Concurrency
rayon = "1.11.0"
crossbeam = "0.8.4"
parking_lot = "0.12.5"

# UI
iced = "0.13.1"

# Inter-crate dependencies
vxutil-core = { path = "vxutil-core" }
vxutil-engine = { path = "vxutil-engine" }
vxutil-ui = { path = "vxutil-ui" }
