[package]
name = "vxutil-core"
version = "0.1.0"
authors = [
    "levish <shiueo.csh@gmail.com>",
]
edition = "2024"
rust-version = "1.91.1"

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
