[package]
name = "vxutil-engine"
version = "0.1.0"
authors = [
    "levish <shiueo.csh@gmail.com>",
]
edition = "2024"
rust-version = "1.91.1"

[dependencies]
vxutil-core = { path = "../vxutil-core" }
anyhow = "1.0.100"
thiserror = "2.0.17"
ffmpeg-next = "8.0.0"
wgpu = "27.0.1"
image = "0.25.8"
rayon = "1.11.0"
crossbeam = "0.8.4"
parking_lot = "0.12.5"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
