[package]
name = "vxutil-ui"
version = "0.1.0"
authors = [
    "levish <shiueo.csh@gmail.com>",
]
edition = "2024"
rust-version = "1.91.1"

[[bin]]
name = "vxutil"
path = "src/main.rs"

[dependencies]
vxutil-core = { path = "../vxutil-core" }
vxutil-engine = { path = "../vxutil-engine" }
anyhow = "1.0.100"
iced = "0.13.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
tracing-appender = "0.2.3"
